trabajo curso html

--- a/Curso HTML/introduccion/ejercicio_002.html
+++ b/Curso HTML/introduccion/ejercicio_002.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Ejemplo de Página HTML5</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <!--<link rel="stylesheet" href="ejercicio_002.css">-->
+    <link rel="stylesheet" href="ejercicio_002.css">
 
     <style>
         h1 { background-color: red }
