--- a/Curso HTML/formulario/explicacion.html
+++ b/Curso HTML/formulario/explicacion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Ficha de Nuevo Socio</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="ejercicio_003.css">
+    <link rel="stylesheet" href="explicacion.css">
 </head>
 <body>
     <h1>Ficha de Nuevo Socio</h1>
