--- a/Curso HTML/introduccion/ejercicio_001.html
+++ b/Curso HTML/introduccion/ejercicio_001.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Mi Página de Ejemplo</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <!--<link rel="stylesheet" href="ejercicio_001.css">-->
+    <link rel="stylesheet" href="ejercicio_001.css">
   </head>
   
   <body>
