--- a/Curso HTML/002 formulario/ejemplo002.html
+++ b/Curso HTML/002 formulario/ejemplo002.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <title>Formulario de contacto</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="ejemplo002.css">
 </head>
+
 <body>
   <header>
     <h1>Formulario de contacto</h1>
   </header>
   <main>
     <form action="enviar.php" method="post">
-      <input type="text" name="nombre" placeholder="Nombre"  required>
-      <input type="email" name="email" placeholder="Correo electrónico"  required>
+      <input type="text" name="nombre" placeholder="Nombre" required>
+      <input type="email" name="email" placeholder="Correo electrónico" required>
       <input type="tel" name="telefono" placeholder="Teléfono">
       <input type="text" name="mensaje" placeholder="Mensaje">
       <input type="submit" value="Enviar">
     </form>
   </main>
 </body>
+
 </html>
