--- a/Curso HTML/007 Efectos/animaciones.html
+++ b/Curso HTML/007 Efectos/animaciones.html
@@ -24,7 +24,7 @@
             }
         }
 
-        @keyframes rotate {
+        @keyframes rotar {
             0% {
                 transform: rotate(0deg);
             }
@@ -48,9 +48,9 @@
             height: 20px;
             background-color: #3498db;
             border:1px solid black;
-            animation: desplazar 5s ease infinite 0s;
+            /*animation: desplazar 5s ease infinite 0s;*/
             /*animation: apagarse 0.2s ease infinite 0s;*/
-            /*animation: rotate 1s ease infinite 0s; */
+            animation: rotar 1s ease infinite 0s; 
             
             vertical-align: center;
             padding: 20px;
@@ -58,7 +58,6 @@
 
         div:hover {
             animation: cambio-de-color 2s ease-in-out;
-            /*background-color: white;*/
         }
         </style>
 </head>
