--- a/Curso HTML/007 Efectos/transiciones2.html
+++ b/Curso HTML/007 Efectos/transiciones2.html
@@ -3,7 +3,26 @@
 <head>
   <meta charset="utf-8">
   <title>Ejemplo de transición CSS3</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      width: 50%;
+      margin: 0 auto;
+    }
+    /*Cuando el usuario pasa el ratón por encima del elemento .element, 
+    el fondo se vuelve negro, el texto se vuelve blanco y el elemento se escala un 10%. 
+    La transición dura 2 segundos y comienza 1 segundo después de que el usuario 
+    pasa el ratón por encima del elemento. */
+    .element {
+
+      transition: all 2s ease-in-out 1s;
+    }
+
+    .element:hover {
+      background-color: #000;
+      color: #fff;
+      transform: scale(1.1);
+    }
+</style>
 </head>
 <body>
 
@@ -11,22 +30,5 @@
   <h1>Título</h1>
   <p>Este es un ejemplo de transición CSS3</p>
 </div>
-
-<style>
-    /*Cuando el usuario pasa el ratón por encima del elemento .element, 
-    el fondo se vuelve negro, el texto se vuelve blanco y el elemento se escala un 10%. 
-    La transición dura 2 segundos y comienza 1 segundo después de que el usuario 
-    pasa el ratón por encima del elemento. */
-.element {
-  transition: all 2s ease-in-out 1s;
-}
-
-.element:hover {
-  background-color: #000;
-  color: #fff;
-  transform: scale(1.1);
-}
-</style>
-
 </body>
 </html>
