--- a/Curso HTML/003 posicion/ejercicio_004c.html
+++ b/Curso HTML/003 posicion/ejercicio_004c.html
@@ -5,7 +5,8 @@
         /* Estilos generales de la página */
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
+            width: 90%;
+            margin: 0 auto;
             padding: 0;
         }
 
