--- a/Curso HTML/008 Responsivo/ejemplo3.html
+++ b/Curso HTML/008 Responsivo/ejemplo3.html
@@ -5,37 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        header, main {
-            height: 100%;
+        body, header, main {
             margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            padding: 0;
+        }
+
+        header {
             background-color: gainsboro;
+            text-align: center;
         }
 
         main {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             background-color: pink;
         }
 
-
-        
-        .video-container {            
+        .video-container {
+            position: relative;
+            width: 100%;
+            max-width: 1024px; /* Ajusta el ancho máximo según tus necesidades */
             border: 1px solid red;
-            background-color: blue;
-        }
-
-        .video-container iframe {            
-            top: 0;
-            left: 0;
-            width: 500px;
-            height: 300px;
             padding: 10px;
         }
 
-        iframe {
-            padding: 10px;
-            background-color: green;
+        .video-container iframe {
+            width: 100%;
+            aspect-ratio: 16/9; /* Establece la relación de aspecto 16:9 para videos de YouTube */
+            border: 0; /* Elimina el borde del iframe */
+            padding: 10px 5px;
         }
     </style>
 </head>
