--- a/Curso HTML/001 introduccion/ejercicio_001.html
+++ b/Curso HTML/001 introduccion/ejercicio_001.html
@@ -45,7 +45,7 @@
       
       <section id="imagenes">
         <h2>Imágenes</h2>
-        <img src="imagen.jpg" alt="Una imagen de ejemplo">
+        <img src="imagen.png" alt="Una imagen de ejemplo">
       </section>
       
       <section id="enlaces">
