--- a/Curso HTML/003 posicion/ejercicio_004.html
+++ b/Curso HTML/003 posicion/ejercicio_004.html
@@ -20,13 +20,22 @@
             padding: 20px;
             margin: 10px;
         }
+
+        span {
+            background-color: yellow;            
+        }
+
+        p {
+            background-color: green;
+            margin: 0 auto;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="box">Elemento 1</div>
-        <div class="box">Elemento 2</div>
-        <div class="box">Elemento 3</div>
+        <div class="box"><p><span>Elemento 1</span></p></div>
+        <div class="box"><p>Elemento 2</p></div>
+        <div class="box"><p>Elemento 3</p></div>
     </div>
 </body>
 </html>
