--- a/Curso HTML/003 posicion/ejercicio_004b.html
+++ b/Curso HTML/003 posicion/ejercicio_004b.html
@@ -19,12 +19,13 @@
             border: 1px solid #ccc;
             padding: 20px;
             margin: 10px;
+            width: 80%;
         }
 
         .relative {
             position: relative;
             left: 30px;
-            top: 0px;
+            top: 30px;
         }
 
     </style>
