--- a/Curso HTML/003 posicion/ejercicio_004d.html
+++ b/Curso HTML/003 posicion/ejercicio_004d.html
@@ -20,7 +20,7 @@
         }
 
         .content {
-            margin: 80px 0 20px; /* Espacio para el encabezado fijo */
+            margin: 80px 0 20px; /* Espacio para el encabezado fijo (Sup, Der, Inf, Izq) */
             padding: 20px;
         }
 
