--- a/Curso HTML/003 posicion/ejercicio_004e.html
+++ b/Curso HTML/003 posicion/ejercicio_004e.html
@@ -13,14 +13,15 @@
             width: 600px;
             margin: 0 auto;
             overflow: auto; /* Para limpiar los flotadores */
-            background-color: yellow;
+            border: 2px solid red;
         }
 
         .left-column {
             width: 50%;
             float: left; /* Hace que la columna flote a la izquierda */
-            background-color: #f0f0f0;
+            background-color: cyan;
             padding: 0px; /*están juntos*/
+            text-align: center;
         }
 
         .right-column {
@@ -28,6 +29,7 @@
             float: left; /* Hace que la columna flote a la izquierda */
             background-color: #ccc;
             padding: 0px;
+            text-align: right;
         }
     </style>
 </head>
