--- a/Curso HTML/003 posicion/ejercicio_004e.html
+++ b/Curso HTML/003 posicion/ejercicio_004e.html
@@ -12,7 +12,7 @@
         .container {
             width: 600px;
             margin: 0 auto;
-            overflow: auto; /* Para limpiar los flotadores */
+            overflow: auto; /* Las barras de scroll saldrán si es necesario */
             border: 2px solid red;
         }
 
