--- a/Curso HTML/003 posicion/ejercicio_004d.html
+++ b/Curso HTML/003 posicion/ejercicio_004d.html
@@ -13,7 +13,7 @@
             background-color: #333;
             color: #fff;
             padding: 20px;
-            position: fixed;
+            position: fixed; /* mantenerse en la pantalla aunque se haga "scroll" */
             top: 0;
             left: 0;
             width: 100%;
