--- a/Curso HTML/007 Efectos/1 transformaciones.html
+++ b/Curso HTML/007 Efectos/1 transformaciones.html
@@ -12,11 +12,14 @@
             border:1px solid black;
             padding: 20px;
             margin: 100px;
+            transform: rotate(15deg);
         }
 
         /* Aplicar una transformación de escala al pasar el mouse sobre el cuadrado */
         div:hover {
-            transform: scale(1.2);
+            /*transform: scale(1.2);*/
+            /*transform: skewX(30deg);*/
+            transform: rotate(90deg);
         }
     </style>
 </head>
