--- a/Curso HTML/008 Responsivo/ejemplo3.html
+++ b/Curso HTML/008 Responsivo/ejemplo3.html
@@ -31,7 +31,7 @@
         }
 
         .video-container iframe {
-            width: 100%;
+            width: calc(100% - 10px);
             aspect-ratio: 16/9; /* Establece la relación de aspecto 16:9 para videos de YouTube */
             border: 0; /* Elimina el borde del iframe */
             padding: 10px 5px;
