--- a/Curso HTML/008 Responsivo/ejemplo4.html
+++ b/Curso HTML/008 Responsivo/ejemplo4.html
@@ -13,7 +13,7 @@
         
         .container {
             display: inline-flex;
-            /*flex-wrap: wrap;*/
+            flex-wrap: wrap;
             margin: 10px auto;
             justify-content: space-between;
             border: 1px solid black; 
@@ -45,17 +45,17 @@
     <div class="container">
         <div class="row">
             <div class="celda"><p>F1 C1</p></div>
-            <div class="celda"><p>F1 C2</p></div>
-            <div class="celda"><p>F1 C3</p></div>
-        </div>
-        <div class="row">
             <div class="celda"><p>F2 C1</p></div>
-            <div class="celda"><p>F2 C2</p></div>
-            <div class="celda"><p>F2 C3</p></div>
+            <div class="celda"><p>F3 C1</p></div>
         </div>
         <div class="row">
-            <div class="celda"><p>F3 C1</p></div>
+            <div class="celda"><p>F1 C2</p></div>
+            <div class="celda"><p>F2 C2</p></div>
             <div class="celda"><p>F3 C2</p></div>
+        </div>
+        <div class="row">
+            <div class="celda"><p>F1 C3</p></div>
+            <div class="celda"><p>F2 C3</p></div>
             <div class="celda"><p>F3 C3</p></div>
         </div>
     </div>        
