--- a/Curso HTML/003 posicion/ejercicio1.html
+++ b/Curso HTML/003 posicion/ejercicio1.html
@@ -11,7 +11,7 @@
 
         .container {
             width: 100%;
-            text-align: center;
+            text-align: center;            
         }
 
         .box {
@@ -19,6 +19,7 @@
             border: 1px solid #ccc;
             padding: 20px;
             margin: 10px;
+            /*display: inline-block;*/
         }
 
         span {
